# oahu-traffic-camera-exploration

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 0.01-kh-initial-exploration.ipynb
oahu_traffic_camera_exploration/: __init__.py  config.py  dataset.py  download_data.py  features.py  plots.py
oahu_traffic_camera_exploration/modeling/: predict.py  train.py
