[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oahu_traffic_camera_exploration"
version = "0.0.1"
description = "An analysis of Oahu traffic incidents over time, in comparison with new the new Safety Camera system installed by the city, to explore the usefulness of the new system from revenue-generating and public safety perspectives."
authors = [
  { name = "Kevin Huang" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.14.2"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["oahu_traffic_camera_exploration"]
force_sort_within_sections = true


